--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,24 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation("androidx.fragment:fragment-ktx:1.3.6")
+
+    implementation("androidx.room:room-runtime:2.3.0")
+    annotationProcessor("androidx.room:room-compiler:2.3.0")
+
+    implementation("androidx.room:room-ktx:2.3.0")
+
+    // optional - RxJava2 support for Room
+    implementation("androidx.room:room-rxjava2:2.3.0")
+
+    // optional - RxJava3 support for Room
+    implementation("androidx.room:room-rxjava3:2.3.0")
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation("androidx.room:room-guava:2.3.0")
+
+    // optional - Test helpers
+    testImplementation("androidx.room:room-testing:2.3.0")
+
+    // optional - Paging 3 Integration
+    implementation("androidx.room:room-paging:2.4.0-beta01")
 }
